--- a/.classpath
+++ b/.classpath
@@ -23,13 +23,16 @@
 	<classpathentry kind="lib" path="libs/netty-3.5.7.Final.jar"/>
 	<classpathentry kind="lib" path="libs/phantomjsdriver-1.2.1.jar"/>
 	<classpathentry kind="lib" path="libs/testng-6.9.9.jar"/>
-	<classpathentry kind="lib" path="commons-configuration-1.10.jar"/>
-	<classpathentry kind="lib" path="commons-lang-2.6.jar"/>
-	<classpathentry kind="lib" path="selenium-java-2.53.1-srcs.jar"/>
-	<classpathentry kind="lib" path="selenium-java-2.53.1.jar" sourcepath="selenium-java-2.53.1-srcs.jar"/>
+	<classpathentry kind="lib" path="libs/commons-configuration-1.10.jar"/>
+	<classpathentry kind="lib" path="libs/commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="libs/poi-3.14-20160307.jar"/>
+	<classpathentry kind="lib" path="libs/selenium-java-2.53.1-srcs.jar"/>
+	<classpathentry kind="lib" path="libs/selenium-java-2.53.1.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="poi-3.14-20160307.jar"/>
 	<classpathentry kind="lib" path="E:/Code/Travelzen_Testing/libs/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="E:/Code/TravelzenTestingGit/libs/slf4j-log4j12-1.7.21.jar"/>
+	<classpathentry kind="lib" path="E:/Code/TravelzenTestingGit/libs/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="E:/Code/TravelzenTestingGit/libs/slf4j-api-1.7.21.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
