1. update to latest status 2. add black Frame Search testing

--- a/configuration/test.properties
+++ b/configuration/test.properties
@@ -11,3 +11,5 @@ supplyURL=http://provider.beta.tdxinfo.com/tops-front-provider/facade/signin
 
 
 operationOP3URL=http://member.op3.tdxinfo.com/tops-front-operator-member/facade/signin
+
+PNR=JZEXXV
