--- a/.classpath
+++ b/.classpath
@@ -28,7 +28,7 @@
 	<classpathentry kind="lib" path="libs/commons-lang-2.6.jar"/>
 	<classpathentry kind="lib" path="libs/poi-3.14-20160307.jar"/>
 	<classpathentry kind="lib" path="libs/selenium-java-2.53.1-srcs.jar"/>
-	<classpathentry kind="lib" path="libs/selenium-java-2.53.1.jar"/>
+	<classpathentry kind="lib" path="libs/selenium-java-2.53.1.jar" sourcepath="libs/selenium-java-2.53.1-srcs.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="E:/Code/Travelzen_Testing/libs/log4j-1.2.17.jar"/>
