--- a/configuration/test.properties
+++ b/configuration/test.properties
@@ -1,8 +1,9 @@
 operation_username=yuqing.wang
 operation_password=Abc12345
 
-purchase_username=Chunk
-purchase_password=Abc123456
+purchase_username=yuqingwang
+purchase_password=Abc12345
+payment_password=Abc123456
 
 
 operationURL=http://member.beta.tdxinfo.com/tops-front-operator-member/facade/signin
@@ -11,5 +12,7 @@ supplyURL=http://provider.beta.tdxinfo.com/tops-front-provider/facade/signin
 
 
 operationOP3URL=http://member.op3.tdxinfo.com/tops-front-operator-member/facade/signin
+purchaseOP3URL=http://store.op3.tdxinfo.com/tops-front-purchaser/facade/signin
+supplyOP3URL=http://provider.op3.tdxinfo.com/tops-front-provider/facade/signin
 
-PNR=JZEXXV
+PNR=HDWHTG
