--- a/.classpath
+++ b/.classpath
@@ -31,9 +31,8 @@
 	<classpathentry kind="lib" path="libs/selenium-java-2.53.1.jar" sourcepath="libs/selenium-java-2.53.1-srcs.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="E:/Code/Travelzen_Testing/libs/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="E:/Code/TravelzenTestingGit/libs/slf4j-log4j12-1.7.21.jar"/>
-	<classpathentry kind="lib" path="E:/Code/TravelzenTestingGit/libs/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="E:/Code/TravelzenTestingGit/libs/slf4j-api-1.7.21.jar"/>
+	<classpathentry kind="lib" path="libs/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j-api-1.7.21.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j-log4j12-1.7.21.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
