--- a/.classpath
+++ b/.classpath
@@ -34,5 +34,8 @@
 	<classpathentry kind="lib" path="libs/log4j-1.2.17.jar"/>
 	<classpathentry kind="lib" path="libs/slf4j-api-1.7.21.jar"/>
 	<classpathentry kind="lib" path="libs/slf4j-log4j12-1.7.21.jar"/>
+	<classpathentry kind="lib" path="libs/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="libs/saxon-8.7.jar"/>
+	<classpathentry kind="lib" path="libs/SaxonLiaison.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
